--- a/index.html
+++ b/index.html
@@ -30,30 +30,34 @@ SOFTWARE.
 		<style>
 		html, body
 		{
-			font-family: 'Verdana', sans-serif;
-			text-align: center;
 			width: 99vw;
+			text-align: center;
+			font-family: 'Verdana', sans-serif;
 		}
 
 		#insult
 		{
 			width: 100%;
 			height: 25%;
-			margin-top: 40vh;
 			font-size: 7.5vw;
+			margin-top: 40vh;
 		}
 
 		#btnRefresh
 		{
 			width: 98vw;
 			height: 5%;
+
 			position: absolute;
-			bottom: 3vw;
 			left: 1vw;
 			right: 1vw;
+			bottom: 3vw;
 			font-size: 3vh;
-			background-color: none;
-			border-radius: 1px;
+
+			border: none;
+			box-shadow: none;
+			border-radius: 3px;
+			background-color: #eee;
 		}
 		</style>
 		<script src="insults.js"></script>
